upgrade jdk to 21 and enable preview features upgrade dependencies to latest version add auth exception handler